{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 146,
  "lineage": "e1d80687-a1d4-ca14-74ab-3a980b0206cc",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d342235295932397",
            "arn": "arn:aws:ec2:eu-central-1:767397756963:instance/i-0c5d3784199e9f578",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5d3784199e9f578",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059cf07a8e36066f0",
            "private_dns": "ip-10-250-0-29.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.0.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Environment": "Test",
                  "Project": "Exercise"
                },
                "throughput": 0,
                "volume_id": "vol-06b4d06feb2bd20d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7b1c1d97a02ce56",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "bastion-host",
              "Project": "Exercise"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d16205f51f52e9f9"
            ]
          },
          "dependencies": [
            "data.aws_ssm_parameter.ubuntu_ami",
            "module.bastion.aws_security_group.this",
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:security-group/sg-0d16205f51f52e9f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.250.4.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0d16205f51f52e9f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240601140921557700000004",
            "name_prefix": "terraform-",
            "owner_id": "767397756963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "bastion-sg",
              "Project": "Exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:security-group/sg-01ec763572704c841",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ec763572704c841",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.250.4.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240601140921556800000002",
            "name_prefix": "terraform-",
            "owner_id": "767397756963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "database-sg",
              "Project": "Exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bba550cf714f447",
            "arn": "arn:aws:ec2:eu-central-1:767397756963:elastic-ip/eipalloc-02bba550cf714f447",
            "association_id": "eipassoc-01289cb525fdf8ab6",
            "domain": "vpc",
            "id": "eipalloc-02bba550cf714f447",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-03d8957f45e5824ea",
            "private_dns": "ip-10-250-0-77.eu-central-1.compute.internal",
            "private_ip": "10.250.0.77",
            "public_dns": "ec2-3-69-218-132.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.218.132",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "Test",
              "Project": "Exercise"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:internet-gateway/igw-0031ad92b8d104566",
            "id": "igw-0031ad92b8d104566",
            "owner_id": "767397756963",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "main-igw",
              "Project": "Exercise"
            },
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bba550cf714f447",
            "association_id": "eipassoc-01289cb525fdf8ab6",
            "connectivity_type": "public",
            "id": "nat-0ebd3dcd8fd917534",
            "network_interface_id": "eni-03d8957f45e5824ea",
            "private_ip": "10.250.0.77",
            "public_ip": "3.69.218.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c7b1c1d97a02ce56",
            "tags": {
              "Name": "main-nat-gateway"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "main-nat-gateway",
              "Project": "Exercise"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.this",
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:route-table/rtb-00fe3e0d0d6e865be",
            "id": "rtb-00fe3e0d0d6e865be",
            "owner_id": "767397756963",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0031ad92b8d104566",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dmz-public-route-table"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "dmz-public-route-table",
              "Project": "Exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:route-table/rtb-0a5bc49162b53da90",
            "id": "rtb-0a5bc49162b53da90",
            "owner_id": "767397756963",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ebd3dcd8fd917534",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "private-route-table",
              "Project": "Exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006461304492a9a32",
            "route_table_id": "rtb-0a5bc49162b53da90",
            "subnet_id": "subnet-0db9734b72e4e225a"
          },
          "dependencies": [
            "module.networking.aws_eip.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.backend_1",
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09df16cf3210310d4",
            "route_table_id": "rtb-0a5bc49162b53da90",
            "subnet_id": "subnet-075c1d69416ded171"
          },
          "dependencies": [
            "module.networking.aws_eip.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.backend_2",
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f8136a98df7c3ea",
            "route_table_id": "rtb-00fe3e0d0d6e865be",
            "subnet_id": "subnet-0c7b1c1d97a02ce56"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.dmz",
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed3a36c7a7812739",
            "route_table_id": "rtb-00fe3e0d0d6e865be",
            "subnet_id": "subnet-02d66da9b94dac0a0"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.dmz",
            "module.networking.aws_subnet.dmz_2",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036b779ff86d034bf",
            "route_table_id": "rtb-0a5bc49162b53da90",
            "subnet_id": "subnet-0e4e948f7cb9eefe8"
          },
          "dependencies": [
            "module.networking.aws_eip.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b91be52c97beb99",
            "route_table_id": "rtb-0a5bc49162b53da90",
            "subnet_id": "subnet-00004393c6fad84f1"
          },
          "dependencies": [
            "module.networking.aws_eip.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_subnet.frontend_2",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:subnet/subnet-0db9734b72e4e225a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db9734b72e4e225a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397756963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend-private-subnet-1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "backend-private-subnet-1",
              "Project": "Exercise"
            },
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:subnet/subnet-075c1d69416ded171",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.250.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075c1d69416ded171",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397756963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend-private-subnet-2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "backend-private-subnet-2",
              "Project": "Exercise"
            },
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:subnet/subnet-0c7b1c1d97a02ce56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.250.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7b1c1d97a02ce56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397756963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dmz-public-subnet-1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "dmz-public-subnet-1",
              "Project": "Exercise"
            },
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:subnet/subnet-02d66da9b94dac0a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d66da9b94dac0a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397756963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dmz-public-subnet-2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "dmz-public-subnet-2",
              "Project": "Exercise"
            },
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:subnet/subnet-0e4e948f7cb9eefe8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.250.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4e948f7cb9eefe8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397756963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frontend-private-subnet-1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "frontend-private-subnet-1",
              "Project": "Exercise"
            },
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:subnet/subnet-00004393c6fad84f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.250.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00004393c6fad84f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397756963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frontend-private-subnet-2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "frontend-private-subnet-2",
              "Project": "Exercise"
            },
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:vpc/vpc-0daa89432d3172645",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-045f15723d30a659b",
            "default_route_table_id": "rtb-0cd5c5de5b32b9267",
            "default_security_group_id": "sg-0e0c44c0ab4496d7c",
            "dhcp_options_id": "dopt-0f99fca6f128e9001",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0daa89432d3172645",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd5c5de5b32b9267",
            "owner_id": "767397756963",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "main-vpc",
              "Project": "Exercise"
            }
          }
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d342235295932397",
            "arn": "arn:aws:ec2:eu-central-1:767397756963:instance/i-019a08ada4b7b97f4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019a08ada4b7b97f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d913742b5a0f8c7",
            "private_dns": "ip-10-250-4-99.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.4.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Environment": "Test",
                  "Project": "Exercise"
                },
                "throughput": 0,
                "volume_id": "vol-0cb5b10bc11b7c869",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4e948f7cb9eefe8",
            "tags": {
              "Name": "server"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "server",
              "Project": "Exercise"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8202d68306b26cd"
            ]
          },
          "dependencies": [
            "data.aws_ssm_parameter.ubuntu_ami",
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this",
            "module.server.aws_security_group.lb",
            "module.server.aws_security_group.server"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:loadbalancer/app/server-lb/c54b8ed76067415e",
            "arn_suffix": "app/server-lb/c54b8ed76067415e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "server-lb-1620850185.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:loadbalancer/app/server-lb/c54b8ed76067415e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "server-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-060cc94b59fbd1dad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d66da9b94dac0a0"
              },
              {
                "subnet_id": "subnet-0c7b1c1d97a02ce56"
              }
            ],
            "subnets": [
              "subnet-02d66da9b94dac0a0",
              "subnet-0c7b1c1d97a02ce56"
            ],
            "tags_all": {
              "Environment": "Test",
              "Project": "Exercise"
            },
            "vpc_id": "vpc-0daa89432d3172645",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.networking.aws_subnet.dmz_1",
            "module.networking.aws_subnet.dmz_2",
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this",
            "module.server.aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:listener/app/server-lb/c54b8ed76067415e/9e7b6894c82a4411",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:targetgroup/server-tg/e096cecd8dbd687d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:listener/app/server-lb/c54b8ed76067415e/9e7b6894c82a4411",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:loadbalancer/app/server-lb/c54b8ed76067415e",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Test",
              "Project": "Exercise"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.server.aws_lb.this",
            "module.server.aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:targetgroup/server-tg/e096cecd8dbd687d",
            "arn_suffix": "targetgroup/server-tg/e096cecd8dbd687d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:targetgroup/server-tg/e096cecd8dbd687d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "server-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Test",
              "Project": "Exercise"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:targetgroup/server-tg/e096cecd8dbd687d-2024060114093938150000000a",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:767397756963:targetgroup/server-tg/e096cecd8dbd687d",
            "target_id": "i-019a08ada4b7b97f4"
          },
          "dependencies": [
            "data.aws_ssm_parameter.ubuntu_ami",
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this",
            "module.server.aws_instance.this",
            "module.server.aws_lb_target_group.this",
            "module.server.aws_security_group.lb",
            "module.server.aws_security_group.server"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:security-group/sg-060cc94b59fbd1dad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.250.4.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-060cc94b59fbd1dad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240601140921557200000003",
            "name_prefix": "terraform-",
            "owner_id": "767397756963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "lb-sg",
              "Project": "Exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397756963:security-group/sg-0a8202d68306b26cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8202d68306b26cd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060cc94b59fbd1dad"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240601140923956200000006",
            "name_prefix": "terraform-",
            "owner_id": "767397756963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "server-sg"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "server-sg",
              "Project": "Exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daa89432d3172645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.frontend_1",
            "module.networking.aws_vpc.this",
            "module.server.aws_security_group.lb"
          ]
        }
      ]
    }
  ]
}